--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,3 +6,14 @@
 .banner{
     background-color: rgb(233, 193, 193);
 }
+.botonprincipal{
+    background-color: red;
+    border-color: red;
+    font-size: 20px;
+    width: 15%;
+    text-transform: uppercase;
+}
+h5{
+    font-size: 2rem;
+    font-weight: 700;
+}
