--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,25 @@ body{
   }
 /* CARDS FIN */
 
+/* MODAL MANTENIMIENTO */
+
+.arreglar{
+    margin-top: 12px;
+    color: #128c7e;
+}
+
+.boton-modal{
+    border-color: #128c7e;
+    background-color: #128c7e;
+}
+
+.titulo-modal{
+    font-weight: bold;
+    color: #666666;
+}
+
+/* MODAL MANTENIMIENTO FIN */
+
 /* CLIENTES */
 
 .carrusel {
@@ -101,6 +120,10 @@ body{
     transform: scale(1.2);
     transition: 1s;
   }
+
+.clientes{
+    margin-top: -50px;
+}
 
 /* CLIENTES FIN */
 
@@ -195,6 +218,55 @@ h5{
     
 }
 
+/* PIE DE PAGINA */
+
+.pie-de-pagina{
+    text-decoration: none;
+}
+
+/* PIE DE PAGINA FIN */
+
+
+/* NOSOTROS */
+
+.nosotros-col-2{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.nosotros-col-2 > .principios{
+    margin: 0 auto;
+}
+
+.descripcion{
+    margin-bottom: 30px;
+}
+
+.nosotros-texto{
+    color: #666666;
+    font-size: 20px;
+}
+
+.imagenes-nosotros{
+    width: 70px;
+    height: 70px;
+}
+
+.nosotros-titulo{
+    font-weight: bold;
+    color: #666666;
+}
+
+@media(min-width:112px) and (max-width:768px){
+    .nosotros-col-2 > .principios{
+        margin-left: 110px;
+    }
+}
+
+/* NOSOTROS FIN */
 
 
 
