--- a/styles/styles.css
+++ b/styles/styles.css
@@ -149,6 +149,15 @@ h5{
     font-weight: 600;
 }
 
+/* ZOOM IMG SERVICIOS */
+
+.zoom{
+    transition: all .3s ease;
+}
+.zoom:hover{
+    transform: scale(1.2);
+}
+
 /* SERVICIO 1 */
 
 .imagen-servicio-uno{
@@ -171,6 +180,55 @@ h5{
 .imagenDosServicioUno{
     margin-top: 40px;
 }
+
+/* BOTON FLOTANTE */
+
+#btn-mas{
+    display: none;
+}
+.btncontainer{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+.redes a, .btn-mas label{
+    display: block;
+    text-decoration: none;
+    background: #2b6bcc;
+    color: #fff;
+    width: 55px;
+    height: 55px;
+    line-height: 55px;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
+    transition: all 500ms ease;
+}
+.redes a:hover{
+    background: #fff;
+    color: #cc2b2b;
+}
+.redes a{
+    margin-bottom: -15px;
+    opacity: 0;
+    visibility: hidden;
+}
+#btn-mas:checked~ .redes a{
+    margin-bottom: 10px;
+    opacity: 1;
+    visibility: visible;
+}
+.btn-mas label{
+    cursor: pointer;
+    background: #f44141;
+    font-size: 23px;
+}
+#btn-mas:checked ~ .btn-mas label{
+    transform: rotate(135deg);
+    font-size: 25px;
+}
+
+
 
 /* SERVICIO 2 */
 
