--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,7 +173,7 @@ h5{
 .servicioOne{
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
     margin-bottom: 60px;
 }
 
