--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,13 +46,16 @@ h5{
     font-weight: 600;
 }
 
+.ancho-titulo{
+    background-color: red;
+}
 .titulo-servicios{
     background-color: rgba(250, 12, 12, 0.822);
     /* background-color: rgba(2, 2, 2, 0.555); */
     /* color: #000; */
     font-weight: 700;
     border-radius: 10px;
-    border: 3px solid #fff;
+    border: 2px solid #fff;
 }
 
 /* NAVBAR */
